--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://MujtabaJunaid.github.io/buildables_task",
+  "homepage": "https://mujtabajunaid.github.io/buildables_task",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
