--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-groq==0.3.1
-python-dotenv==1.0.0
+fastapi==0.95.2
+pydantic==1.10.5
+groq==0.1.0
+uvicorn==0.18.3
